Integrate umplock to armsoc ddx driver for MALI400
MALI400 EGL driver use umplock for CPU/GPU accessing synchronization.
Port umplock related changes from xf86-video-mali to xf86-video-armsoc DDX driver.

Change-Id: I0765e4a747153ff72cb7ebb44afe0136aacd5834

--- a/man/armsoc.man
+++ b/man/armsoc.man
@@ -64,6 +64,11 @@ an error will be logged, and the -background none functionality will be
 disabled.
 .IP
 Default: NULL
+.TP
+.BI "Option \*qUMP_LOCK\*q \*q" boolean \*q
+Use the umplock module for cross-process access synchronization. It should be only enabled for Mali400
+.IP
+Default: Umplock is Disabled
 
 .SH DRM DEVICE SELECTION
 
