[change] debian/ from use "dpkg-dev" to use "dh"

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-xf86-video-armsoc-xilinx (1.4-2) unstable; urgency=low
+xf86-video-armsoc-xilinx (1.4-1) unstable; urgency=low
 
-  * base from git://anongit.freedesktop.org/git/xorg/driver/xf86-video-armsoc.git
+  * base from git://anongit.freedesktop.org/git/xorg/driver/xf86-video-armsoc.git(1.4-1)
   * add drmmode_xilinx
 
- -- Ichiro Kawazome <ichiro_k@ca2.so-net.ne.jp> Mon, 16 Dec 2019 12:15:18 -0800
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Mon, 16 Dec 2019 16:40:18 +0900
 
