--- a/README
+++ b/README
@@ -44,6 +44,27 @@ Setting up xserver-xorg-video-armsoc-xilinx (1.4-1) ...
 Processing triggers for man-db (2.8.5-2) ...
 ```
 
+Configuration xserver-xorg-video
+--------------------------------
+
+/etc/X11/xorg.conf
+
+```conf:/etc/X11/xorg.conf
+Section "Device"
+	Identifier	"ZynqMP"
+	Driver		"armsoc"
+	Option		"DRI2"			"true"
+	Option		"DRI2_PAGE_FLIP"	"false"
+	Option		"DRI2_WAIT_VSYNC"	"true"
+	Option		"DEBUG"			"false"
+EndSection
+
+Section "Screen"
+	Identifier	"DefaultScreen"
+	Device		"ZynqMP"
+EndSection
+```
+
 DRM driver selection
 --------------------
 While most operations use only the standard DRM modesetting interfaces, certain operations
