--- a/README
+++ b/README
@@ -7,8 +7,24 @@ Original: https://anongit.freedesktop.org/git/xorg/driver/xf86-video-armsoc.git
 Build Debian Package
 --------------------
 
+### Install packages required for build
+
 ```console
 shell$ apt install libdrm-dev libudev-dev libxext-dev pkg-config x11proto-core-dev x11proto-fonts-dev x11proto-gl-dev x11proto-xf86dri-dev xutils-dev xserver-xorg-dev quilt dh-autoreconf debhelper
+```
+
+### Generate configure and Makefile
+
+```console
+shell$ ./autogen.sh
+     :
+shell$ make distclean
+     :
+```
+
+### Build binary packages
+
+```console
 shell$ sudo debian/rules binary
 ```
 
