--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc-xilinx (1.4-2) unstable; urgency=low
+
+  * remove xorg-video-abi-24 from dependent package for Ubuntu 18.04.
+
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Sat, 8 Feb 2020 22:30:00 +0900
+
 xf86-video-armsoc-xilinx (1.4-1) unstable; urgency=low
 
   * base from git://anongit.freedesktop.org/git/xorg/driver/xf86-video-armsoc.git(1.4-1)
