--- a/README
+++ b/README
@@ -30,18 +30,18 @@ shell$ sudo debian/rules binary
 
 ```console
 shell$ cd ..
-shell$ dpkg --info xserver-xorg-video-armsoc-xilinx_1.4-1_arm64.deb 
+shell$ dpkg --info xserver-xorg-video-armsoc-xilinx_1.4-2_arm64.deb 
  new Debian package, version 2.0.
- size 32924 bytes: control archive=856 bytes.
-     540 bytes,    12 lines      control              
-     611 bytes,     7 lines      md5sums              
+ size 34108 bytes: control archive=832 bytes.
+     501 bytes,    12 lines      control              
+     614 bytes,     7 lines      md5sums              
  Package: xserver-xorg-video-armsoc-xilinx
  Source: xf86-video-armsoc-xilinx
- Version: 1.4-1
+ Version: 1.4-2
  Architecture: arm64
  Maintainer: ikwzm <ichiro_k@ca2.so-net.ne.jp>
- Installed-Size: 100
- Depends: libc6 (>= 2.17), libdrm2 (>= 2.4.36), libpixman-1-0, xorg-video-abi-24, xserver-xorg-core (>= 2:1.18.99.901)
+ Installed-Size: 99
+ Depends: libc6 (>= 2.17), libdrm2 (>= 2.4.36), libpixman-1-0, xserver-xorg-core
  Provides: xorg-driver-video
  Section: x11
  Priority: optional
@@ -52,11 +52,11 @@ Install Debian Package
 ----------------------
 
 ```console
-shell$ sudo dpkg -i xserver-xorg-video-armsoc-xilinx_1.4-1_arm64.deb 
-(Reading database ... 63768 files and directories currently installed.)
-Preparing to unpack xserver-xorg-video-armsoc-xilinx_1.4-1_arm64.deb ...
-Unpacking xserver-xorg-video-armsoc-xilinx (1.4-1) over (1.4-1) ...
-Setting up xserver-xorg-video-armsoc-xilinx (1.4-1) ...
+shell$ sudo dpkg -i xserver-xorg-video-armsoc-xilinx_1.4-2_arm64.deb 
+(Reading database ... 104374 files and directories currently installed.)
+Preparing to unpack xserver-xorg-video-armsoc-xilinx_1.4-2_arm64.deb ...
+Unpacking xserver-xorg-video-armsoc-xilinx (1.4-2) over (1.4-1) ...
+Setting up xserver-xorg-video-armsoc-xilinx (1.4-2) ...
 Processing triggers for man-db (2.8.5-2) ...
 ```
 
