--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc-xilinx (1.4-ubuntu20-2) unstable; urgency=low
+
+  * update for Ubuntu 20.xx
+
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Mon, 28 Dec 2020 11:00:00 +0900
+
 xf86-video-armsoc-xilinx (1.4-2) unstable; urgency=low
 
   * remove xorg-video-abi-24 from dependent package for Ubuntu 18.04.
