--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc-xilinx (1.4-3) unstable; urgency=low
+
+  * fix Bypass the exa layer to free the root pixmap
+
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Wed, 24 Feb 2021 14:30:00 +0900
+
 xf86-video-armsoc-xilinx (1.4-2) unstable; urgency=low
 
   * remove xorg-video-abi-24 from dependent package for Ubuntu 18.04.
