--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc-xilinx (1.4-ubuntu20-3) unstable; urgency=low
+
+  * fix Bypass the exa layer to free the root pixmap
+
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Wed, 3 Mar 2021 12:50:00 +0900
+
 xf86-video-armsoc-xilinx (1.4-ubuntu20-2) unstable; urgency=low
 
   * update for Ubuntu 20.xx
