[start] development to support DRI3

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc-xilinx (1.5-rc1) unstable; urgency=low
+
+  * add DRI3 support(under development)
+
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Wed, 24 Feb 2021 14:30:00 +0900
+
 xf86-video-armsoc-xilinx (1.4-3) unstable; urgency=low
 
   * fix Bypass the exa layer to free the root pixmap
