--- a/README
+++ b/README
@@ -30,17 +30,17 @@ shell$ sudo debian/rules binary
 
 ```console
 shell$ cd ..
-shell$ dpkg --info xserver-xorg-video-armsoc-xilinx_1.4-2_arm64.deb 
+shell$ dpkg --info xserver-xorg-video-armsoc-xilinx_1.5-alpha1_arm64.deb
  new Debian package, version 2.0.
- size 34108 bytes: control archive=832 bytes.
-     501 bytes,    12 lines      control              
-     614 bytes,     7 lines      md5sums              
+ size 35664 bytes: control archive=808 bytes.
+     507 bytes,    12 lines      control
+     520 bytes,     6 lines      md5sums
  Package: xserver-xorg-video-armsoc-xilinx
  Source: xf86-video-armsoc-xilinx
- Version: 1.4-2
+ Version: 1.5-alpha1
  Architecture: arm64
  Maintainer: ikwzm <ichiro_k@ca2.so-net.ne.jp>
- Installed-Size: 99
+ Installed-Size: 103
  Depends: libc6 (>= 2.17), libdrm2 (>= 2.4.36), libpixman-1-0, xserver-xorg-core
  Provides: xorg-driver-video
  Section: x11
@@ -52,12 +52,13 @@ Install Debian Package
 ----------------------
 
 ```console
-shell$ sudo dpkg -i xserver-xorg-video-armsoc-xilinx_1.4-2_arm64.deb 
-(Reading database ... 104374 files and directories currently installed.)
-Preparing to unpack xserver-xorg-video-armsoc-xilinx_1.4-2_arm64.deb ...
-Unpacking xserver-xorg-video-armsoc-xilinx (1.4-2) over (1.4-1) ...
-Setting up xserver-xorg-video-armsoc-xilinx (1.4-2) ...
-Processing triggers for man-db (2.8.5-2) ...
+shell$ sudo dpkg -i xserver-xorg-video-armsoc-xilinx_1.5-alpha1_arm64.deb
+[sudo] password for fpga:
+(Reading database ... 188970 files and directories currently installed.)
+Preparing to unpack xserver-xorg-video-armsoc-xilinx_1.5-alpha1_arm64.deb ...
+Unpacking xserver-xorg-video-armsoc-xilinx (1.5-alpha1) over (1.5-alpha1) ...
+Setting up xserver-xorg-video-armsoc-xilinx (1.5-alpha1) ...
+Processing triggers for man-db (2.9.1-1) ...
 ```
 
 Configuration xserver-xorg-video
@@ -69,7 +70,7 @@ Configuration xserver-xorg-video
 Section "Device"
 	Identifier	"ZynqMP"
 	Driver		"armsoc"
-	Option		"DRI2"			"true"
+	Option		"DRI"			"3"
 	Option		"DRI2_PAGE_FLIP"	"false"
 	Option		"DRI2_WAIT_VSYNC"	"true"
 	Option		"DEBUG"			"false"
