[change] the DRI2 driver name from "armsoc" to the DRM device driver name(eg "xlnx").

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc-xilinx (1.5-alpha2) unstable; urgency=low
+
+  * change the DRI2 driver name from "armsoc" to the DRM device driver name(eg "xlnx")
+
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Tue, 9 Mar 2021 13:00:00 +0900
+
 xf86-video-armsoc-xilinx (1.5-alpha1) unstable; urgency=low
 
   * add DRI3 support(under development)
