--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc-xilinx (1.5-alpha5) unstable; urgency=low
+
+  * add DEBUG_MSG to armsoc_dri3_open()
+
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Thu, 17 Mar 2021 9:30:00 +0900
+
 xf86-video-armsoc-xilinx (1.5-alpha4) unstable; urgency=low
 
   * change to success only when bo has not been generated yet when ARMSOC_CREATE_PIXMAP_IMPORT is set in user_hint  in ARMSOCModifyPixmapHeader()
