--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc-xilinx (1.5-alpha6) unstable; urgency=low
+
+  * add armsoc_sync_init() to ARMSOCDRI3ScreenInit()
+
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Mon, 22 Mar 2021 13:00:00 +0900
+
 xf86-video-armsoc-xilinx (1.5-alpha5) unstable; urgency=low
 
   * add DEBUG_MSG to armsoc_dri3_open()
