--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc-xilinx (1.5-alpha7) unstable; urgency=low
+
+  * remove __func__ argument from DEBUG_MSG() in armsoc_dri3.c
+
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Mon, 22 Mar 2021 13:50:00 +0900
+
 xf86-video-armsoc-xilinx (1.5-alpha6) unstable; urgency=low
 
   * add armsoc_sync_init() to ARMSOCDRI3ScreenInit()
