--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc-xilinx (1.5-alpha8) unstable; urgency=low
+
+  * fix an issue where amsoc_bo_export() would always fail
+
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Mon, 22 Mar 2021 14:50:00 +0900
+
 xf86-video-armsoc-xilinx (1.5-alpha7) unstable; urgency=low
 
   * remove __func__ argument from DEBUG_MSG() in armsoc_dri3.c
