--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xf86-video-armsoc-xilinx (1.5-alpha9) unstable; urgency=low
+
+  * change create_custom_gem() in drmmode_xilinx.c to set GPU buffer alignment size with ioctl of Xilinx DRM Driver.
+  * change create_custom_gem() in drmmode_xilinx.c to get scanout alignment size with ioctl of Xilinx DRM Driver.
+
+ -- ikwzm <ichiro_k@ca2.so-net.ne.jp>  Wed, 3 Aug 2022 12:00:00 +0900
+
 xf86-video-armsoc-xilinx (1.5-alpha8) unstable; urgency=low
 
   * fix an issue where amsoc_bo_export() would always fail
